load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "delay.go",
        "doc.go",
        "filters.go",
        "retry.go",
    ],
    importpath = "github.com/reddit/baseplate.go/retrybp",
    visibility = ["//visibility:public"],
    deps = [
        "//clientpool:go_default_library",
        "//errorsbp:go_default_library",
        "//randbp:go_default_library",
        "@com_github_avast_retry_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "delay_test.go",
        "filters_internal_test.go",
        "filters_test.go",
        "fixtures_test.go",
        "retry_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//clientpool:go_default_library",
        "//errorsbp:go_default_library",
        "//internal/gen-go/reddit/baseplate:go_default_library",
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
        "@com_github_avast_retry_go//:go_default_library",
    ],
)
