load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "retrybp",
    srcs = [
        "delay.go",
        "doc.go",
        "filters.go",
        "retry.go",
    ],
    importpath = "github.com/reddit/baseplate.go/retrybp",
    visibility = ["//visibility:public"],
    deps = [
        "//errorsbp",
        "//randbp",
        "@com_github_avast_retry_go//:retry-go",
    ],
)

go_test(
    name = "retrybp_test",
    size = "small",
    srcs = [
        "delay_test.go",
        "doc_test.go",
        "filters_internal_test.go",
        "filters_test.go",
        "fixtures_test.go",
        "retry_test.go",
    ],
    embed = [":retrybp"],
    deps = [
        "//clientpool",
        "//errorsbp",
        "//internal/gen-go/reddit/baseplate",
        "//log",
        "//metricsbp",
        "@com_github_apache_thrift//lib/go/thrift",
        "@com_github_avast_retry_go//:retry-go",
    ],
)
