load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cpu.go",
        "doc.go",
        "ip.go",
    ],
    importpath = "github.com/reddit/baseplate.go/runtimebp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["cpu_test.go"],
    embed = [":go_default_library"],
)
