load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runtimebp",
    srcs = [
        "config.go",
        "cpu.go",
        "doc.go",
        "ip.go",
        "signal.go",
    ],
    importpath = "github.com/reddit/baseplate.go/runtimebp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "runtimebp_test",
    size = "small",
    srcs = ["cpu_test.go"],
    embed = [":runtimebp"],
)
