load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "errors.go",
        "secrets.go",
        "store.go",
    ],
    importpath = "github.com/reddit/baseplate.go/secrets",
    visibility = ["//visibility:public"],
    deps = [
        "//batcherror:go_default_library",
        "//filewatcher:go_default_library",
        "//log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "secrets_test.go",
        "store_bench_test.go",
        "store_internal_test.go",
        "store_test.go",
    ],
    embed = [":go_default_library"],
    # Mark it as flaky as sometimes fsnotify took too long to notify the code
    # about the updates and TestSecretFileIsUpdated would fail.
    flaky = True,
    deps = ["//log:go_default_library"],
)
