load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "secrets",
    srcs = [
        "config.go",
        "doc.go",
        "encoding.go",
        "errors.go",
        "secrets.go",
        "store.go",
        "testing.go",
    ],
    importpath = "github.com/reddit/baseplate.go/secrets",
    visibility = ["//visibility:public"],
    deps = [
        "//errorsbp",
        "//filewatcher",
        "//log",
    ],
)

go_test(
    name = "secrets_test",
    size = "small",
    srcs = [
        "encoding_test.go",
        "secrets_test.go",
        "store_bench_test.go",
        "store_internal_test.go",
        "store_test.go",
        "testing_test.go",
    ],
    embed = [":secrets"],
    # Mark it as flaky as sometimes fsnotify took too long to notify the code
    # about the updates and TestSecretFileIsUpdated would fail.
    flaky = True,
    deps = ["//log"],
)
