load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "doc.go",
        "string.go",
    ],
    importpath = "github.com/reddit/baseplate.go/set",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["string_test.go"],
    embed = [":go_default_library"],
)
