load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "interface.go",
        "v1.go",
        "versions.go",
    ],
    importpath = "github.com/reddit/baseplate.go/signing",
    visibility = ["//visibility:public"],
    deps = ["//secrets:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "doc_test.go",
        "v1_quick_test.go",
        "v1_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//metricsbp:go_default_library",
        "//secrets:go_default_library",
    ],
)
