load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "signing",
    srcs = [
        "doc.go",
        "interface.go",
        "v1.go",
        "versions.go",
    ],
    importpath = "github.com/reddit/baseplate.go/signing",
    visibility = ["//visibility:public"],
    deps = ["//secrets"],
)

go_test(
    name = "signing_test",
    size = "small",
    srcs = [
        "doc_test.go",
        "v1_quick_test.go",
        "v1_test.go",
    ],
    embed = [":signing"],
    deps = [
        "//metricsbp",
        "//secrets",
    ],
)
