load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "headers.go",
        "merger.go",
        "middlewares.go",
        "server.go",
        "testing.go",
        "tracing.go",
    ],
    importpath = "github.com/reddit/baseplate.go/thriftbp",
    visibility = ["//visibility:public"],
    deps = [
        "//edgecontext:go_default_library",
        "//log:go_default_library",
        "//tracing:go_default_library",
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "example_middlewares_test.go",
        "example_server_test.go",
        "fixtures_test.go",
        "headers_test.go",
        "middlewares_test.go",
        "tracing_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//edgecontext:go_default_library",
        "//internal/gen-go/reddit/baseplate:go_default_library",
        "//log:go_default_library",
        "//mqsend:go_default_library",
        "//secrets:go_default_library",
        "//tracing:go_default_library",
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
    ],
)
