load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client_middlewares.go",
        "client_pool.go",
        "doc.go",
        "errors.go",
        "headers.go",
        "merger.go",
        "server.go",
        "server_middlewares.go",
        "tracing.go",
        "ttl_client.go",
    ],
    importpath = "github.com/reddit/baseplate.go/thriftbp",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//clientpool:go_default_library",
        "//edgecontext:go_default_library",
        "//internal/gen-go/reddit/baseplate:go_default_library",
        "//log:go_default_library",
        "//metricsbp:go_default_library",
        "//retrybp:go_default_library",
        "//tracing:go_default_library",
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
        "@com_github_avast_retry_go//:go_default_library",
        "@com_github_go_kit_kit//metrics:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_middlewares_test.go",
        "client_pool_test.go",
        "doc_client_test.go",
        "errors_test.go",
        "example_client_test.go",
        "example_server_test.go",
        "fixtures_test.go",
        "headers_test.go",
        "server_middlewares_test.go",
        "tracing_test.go",
        "ttl_client_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//edgecontext:go_default_library",
        "//internal/gen-go/reddit/baseplate:go_default_library",
        "//log:go_default_library",
        "//mqsend:go_default_library",
        "//retrybp:go_default_library",
        "//secrets:go_default_library",
        "//thriftbp/thrifttest:go_default_library",
        "//tracing:go_default_library",
        "@com_github_apache_thrift//lib/go/thrift:go_default_library",
        "@com_github_avast_retry_go//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
    ],
)
