load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "nanosecond.go",
        "microsecond.go",
        "millisecond.go",
        "second_f.go",
    ],
    importpath = "github.com/reddit/baseplate.go/timebp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "nanosecond_test.go",
        "microsecond_test.go",
        "millisecond_test.go",
        "second_f_test.go",
    ],
    embed = [":go_default_library"],
)
