load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "timebp",
    srcs = [
        "doc.go",
        "microsecond.go",
        "millisecond.go",
        "second_f.go",
    ],
    importpath = "github.com/reddit/baseplate.go/timebp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "timebp_test",
    size = "small",
    srcs = [
        "microsecond_test.go",
        "millisecond_test.go",
        "second_f_test.go",
    ],
    embed = [":timebp"],
)
